feat: improve generation quality with multi-candidate scoring and context input

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,19 @@ VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 # STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
 # STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
 # JUSO_API_KEY=your-juso-api-key
+#
+# Generation scoring weights (optional tuning)
+# SCORE_BASE=40
+# SCORE_LENGTH_WEIGHT=0.45
+# SCORE_TONE_WEIGHT=12
+# SCORE_KEYWORD_WEIGHT=4
+# SCORE_ISSUE_PENALTY=16
+# SCORE_EXCLAMATION_PENALTY=2
+# SCORE_HASHTAG_PENALTY=6
+# SCORE_STORY_PENALTY=4
+# SCORE_QUESTION_PENALTY=4
+#
+# RAG reranking weights (optional tuning)
+# RAG_SIMILARITY_WEIGHT=0.75
+# RAG_TONE_BONUS=0.15
+# RAG_LIKES_WEIGHT=0.1
